fix(style): fix text size and spacing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -74,7 +74,8 @@ body {
 
 p {
   margin-bottom: 1.15rem;
-  font-size: 1rem;
+  font-size: 1.1rem;
+  line-height: 1.75;
   opacity: 0.95;
 }
 
@@ -200,6 +201,7 @@ ol li::marker {
 .blog__post {
   display: grid;
   font-size: 1.2rem;
+  line-height: 1.75;
   grid-template-columns:
     1fr
     min(65ch, 100%)
@@ -360,9 +362,20 @@ p + ol {
 
 .astro-code {
   padding: 12px 16px;
-  margin: 8px 0;
+  margin: 8px 0 calc(1.15rem + 8px) 0;
   font-size: 1rem;
   border-radius: 0.5rem;
+}
+
+.astro-code + figcaption {
+  margin-top: 0;
+}
+.astro-code + div {
+  margin-top: 0;
+}
+.astro-code + figcaption > p,
+.astro-code + div p {
+  font-size: 0.95rem;
 }
 
 :not(.astro-code) > code {
